# ArcticBase

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/seed/workbenches/arctic-base/: manifest.json  theme.md
backend/seed/workbenches/arctic-base/objects/obj_852aa19d3bc04c26879623f0/: content  meta.json
backend/seed/workbenches/arctic-base/objects/obj_e6099c3e591444408284dad7/: content  meta.json
backend/src/arctic_base/: __main__.py  config.py  logging_setup.py  main.py  models.py  theme.py
backend/src/arctic_base/api/: __init__.py  agent.py  deps.py  errors.py  objects.py  render.py  responses.py  templates_data.py  theme.py  workbenches.py
backend/src/arctic_base/storage/: __init__.py  errors.py  filesystem.py
backend/tests/: test_agent.py  test_api.py  test_health.py  test_storage.py
docs/: index.html
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: api.ts  bridge.ts  mini-md.ts  router.ts  theme.ts
frontend/src/lib/chrome/: Blueprints.svelte  Dashboard.svelte  Editor.svelte  FileBrowser.svelte  ImageViewer.svelte  ResponsesHistory.svelte  Settings.svelte  StatusBar.svelte  TopNav.svelte
frontend/src/lib/themed/: HtmlViewer.svelte  MdViewer.svelte  RunbookViewer.svelte  ThemeEditor.svelte  ThemeWrapper.svelte  WorkbenchDashboard.svelte
